--- a/data/index.html
+++ b/data/index.html
@@ -1,1 +1,3 @@
-hallo iedereen muhahahha :D
+joepie :D 
+de apache server werkt met een standaard html pagina.
+op beide nodes is dezelfde html pagina zichtbaar.
